category relation tables are fixed